# python-project-lvl2

./: Makefile  README.md  pyproject.toml
.github/workflows/: gendiff-check.yml
gendiff/: __init__.py  engine.py  gendiff.py  generate_diff.py  get_arguments.py  parsers.py
gendiff/formatters/: json.py  plain.py  str_format.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
